--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,6 +6,11 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <div id="sumar"></div>
+    <div id="promedio"></div>
+    <div id="mayor"></div>
+    <div id="menor"></div>
+
     <div id="tester" style="width:1200px;height:450px;"></div>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
