--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
             @RenderBody()
         </main>
     </div>
-
+    
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - graficas_pasantia - <a asp-area="" asp-page="/Privacy">Privacy</a>
@@ -54,14 +54,43 @@
             const cant = 1296000;
             for (i = 0; i < cant; i++) {
                 ag.push(i);
-                value.push(Math.floor(Math.random() * 1296000+1 ));
+                value.push(Math.floor(Math.random() * cant+1 ));
             }
             muestra = (cant * 3 * 0.5 * 0.5) / (0.02 * 0.02 * (cant - 1) + 3 * 0.5 * 0.5);
             let intervalo = Math.floor(cant / muestra);
+            let suma = 0;
+            let promedio = 0;
+            let mayor = -10000000;
+            let menor = 1000000;
             for (i = 0; i < cant; i += intervalo) {
-                console.log(i);
                 agIndice.push(ag[i]);
-                agFinal.push(value[i]);
+                if(i === 0)
+                    agFinal.push(value[Math.floor(Math.random() * intervalo+1)]);
+                else
+                    agFinal.push(value[i]);
+
+                suma += value[i];
+                if(mayor < value[i]){
+                    mayor = value[i];
+                }
+                    
+                if(menor > value[i]){
+                    menor = value[i];
+                }
+                    
+            }
+            promedio = suma /cant;
+           
+            div = document.getElementById("sumar");
+            div.innerHTML = 'Suma: '+suma;
+            div = document.getElementById("promedio");
+            div.innerHTML = 'Promedio: '+promedio;
+            div = document.getElementById("mayor");
+            div.innerHTML = 'Mayor: '+mayor;
+            div = document.getElementById("menor");
+            div.innerHTML = 'Menor: '+menor;
+            for(let j=i; j< cant+cant*0.5; j+=intervalo){
+                agIndice.push(j);
             }
             TESTER = document.getElementById('tester');
             return Plotly.newPlot(TESTER, [{
